# pd

./: .gitignore
learn/: gate~-help.pd  gate~.pd  synth1~-help.pd  synth1~.pd  task1.pd  task2.pd  task3.pd  theremin-mouse-modamp.pd  theremin-mouse.pd  theremin-mouse1.pd  theremin-mouse2.pd  theremin-tuio.pd
learn/tuio/: TuioDemo.pd  test.pd
lessons/: graphs.scd
lessons 2015-2016/lesson 01 - process/: 1.pd  3.pd  4.pd
lessons 2015-2016/lesson 02 - process/: 1.pd  3.pd
lessons 2015-2016/lesson 05 - process/: synth4~.pd
lessons 2015-2016/lesson 07 - process/: FM random metro 1.pd  FM random metro 2.pd
lessons 2015-2016/lesson 08 - process/: 4 generative FM basic.pd
lessons 2015-2016/lesson 09 - process/: 02 notein synth 1.pd
lessons 2015-2016/lesson 12 - process/: dsp~.pd
lessons 2015-2016/lesson 13 - process/: simple-gen.pd
lessons 2015-2016/lesson 15 - process/: gparam.pd  snd3.pd  soundfiles.pd
lessons 2015-2016/lesson 16 - process/: _02_click_synth.pd  _combine_patches.pd
lessons 2015-2016/lesson 17 - process/: args.pd  osc-test.pd
lessons 2015-2016/lesson 18 - process/: fm_synth_adsr.pd
lessons 2015-2016/lesson 20 - process/: reverbs.pd
lessons 2015-2016/lesson 21 - process/: mictest.pd
lessons 2015-2016/lesson 22 - process/: part1.pd  part2.pd  zslider.pd
lessons 2015-2016/lesson 23 - process/: 01 fiddle FB.pd  01 fiddle.pd
lessons 2015-2016/lesson 27 - process/: pan1.pd
lessons 2015-2016/lesson 29 - grain/: l2_gr.pd  lesson 2 - 1.pd  lesson 2 - 3.pd
lessons 2015-2016/lesson 30 - grain/: lesson 3 - 3.pd  tone_gen~.pd
lessons 2015-2016/lesson 31 - grain/: l4_gr_w.pd
lessons 2015-2016/lesson 32 - grain/: l4_gr_w.pd
lessons 2015-2016/lesson 33 - grain/: auto2.pd
lessons 2015-2016/lesson 34 - process/: grid.pd  random2.pd
lessons 2015-2016/lesson 35 - process/: ezline - test.pd
lessons 2015-2016/zslib/: zfade~.pd  zrandom.pd
lessons 2015/lesson 02 - process/: synth2~.pd
lessons 2015/lesson 04 - process/: gate~-help.pd
lessons 2015/lesson 08 - process/: 1 FM algorithms.pd  2 FM midi tone 1.pd  3 FM random.pd
lessons 2015/lesson 09 - process/: 02 notein synth 3++.pd
lessons 2015/lesson 11 - process/: contols.pd  miccontrool.pd
lessons 2015/lesson 12 - process/: dsp~-help.pd  line-mod.pd  list-rand-help.pd
lessons 2015/lesson 13 - process/: hello world.pd
lessons 2015/lesson 17 - process/: randoms2.pd
lessons 2015/lesson 19 - process/: keyboard.pd
lessons 2015/lesson 21 - process/: lfo_pulse.pd
lessons 2015/lesson 22 - process/: test-params.pd
lessons 2015/lesson 24 - process/: adsr2.pd  borax-mono-adsr.pd  freeze2.pd
lessons 2015/lesson 27 - process/: pan - random.pd  timer.pd
lessons 2015/lesson 30 - grain/: lesson 3 - 2.pd  test_args.pd
lessons 2015/lesson 31 - grain/: lesson 4 - 1.pd  lesson 4 - 2.pd
lessons 2015/lesson 32 - grain/: lesson 1 - 1.pd  lesson 2 poly.pd
lessons 2015/lesson 34 - process/: random3.pd
lessons 2015/libs/: arduino.pd
lessons 2015/zslib/: gparam.pd  ztabplay~-help.pd
lessons 2016/lesson 2/: linear.pd  list_sustitution.pd  midigliss.pd
lessons 2016/lesson 3/: inlets.pd  loadbang1.pd  ringmod.pd  ringmod_2.pd  ringmod_midi 3.pd  ringmod_midi.pd
lessons 2016/lesson5/: table.pd  table2.pd
lessons 2017-2018/01/: _002.pd  _S1.pd  _S2.pd
lessons 2017-2018/02/: 001.pd  002.pd  003.pd  004.pd  005.pd  oscillator.pd  two-osc.pd
lessons 2017-2018/03/: Shepard.pd  envelopes-test.pd  freq-shift.pd  osc1.pd  ringmod-keys.pd  scale1.pd
lessons 2017-2018/04/: 001-fm1.pd  002-feedback-delay.pd  003-simple-phase-mod.pd  004-complex-fm.pd  env.pd  envF.pd  envX.pd  operator.pd
lessons 2017-2018/05/: 001.pd  002.pd  003.pd  004.pd  005.pd  006.pd
lessons 2017-2018/06/: 001.pd  002.pd  003.pd  004.pd  005.pd  006midi.pd  _cue.pd
lessons 2017-2018/07/: 001.pd  002.pd  003.pd  004.pd  005.pd
lessons 2017-2018/08/: 001.pd  002-synth.pd  003-simple-osc.pd  filters.pd  two-osc.pd
lessons 2017-2018/09/: 001.pd  002.pd  003.pd  004.pd  005.pd  006.pd  007.pd  008.pd
lessons 2017-2018/10/: 01 nonlinear.pd
lessons 2017-2018/11/: FFT-1.pd  FFT-2.pd
lessons 2017-2018/12/: LAZER.pd  env.pd  freqshift.pd  hilbert.pd  osc.pd
lessons 2017/lesson 01/: 01 random pitch.pd  02 random frequency plus.pd  02 random frequency.pd
lessons 2017/lesson 02/: additive.pd  additive2.pd  additive3.pd  additive4.pd  amp.pd  list_freq.pd  table_freq.pd
lessons 2017/lesson 03/: am.pd  waves.pd  wavetable.pd
lessons 2017/lesson 04/: _0403 01.pd  _0403 02 env fm.pd  _0403 02 env.pd  _0403 03 dollar1.pd  _0403 04 subpatch.pd  _0403 lorenz.pd  subpatch1.pd
lessons 2017/lesson 05/: 01.pd  02 send-receive.pd  03 list-arp.pd  04 hot-cold-inlets.pd  05 mix1.pd  06 mix2.pd  arp_subpatch.pd  arp_subpatch123.pd  sub1.pd  subpatch
lessons 2017/lesson 06/: 01 env.pd  02 fm 01.pd  03 fm synth.pd
lessons 2017/lesson 08/: samples1.pd
lessons/grains/: lesson1.pd
lessons/lesson 01 - process/: helloworld.pd
lessons/lesson 02 - process/: synth1~.pd
lessons/lesson 04 - process/: vol~-help.pd
lessons/lesson 05 - process/: cursor-xy.pd  swap-test2.pd  synth3~.pd  synth4~-help.pd
lessons/lesson 06 - process/: FM 2 feedback.pd
lessons/lesson 09 - process/: 01 midi objects.pd  02 notein synth 4+.pd
lessons/lesson 1/: tone-random.pd  tone1.pd  tone2.pd
lessons/lesson 1 - process/: 2.pd
lessons/lesson 10 - process/: bpm2ms.pd  random-exp.pd  random2.pd  sound-color.pd  sound-color2.pd
lessons/lesson 11 - process/: control_delay.pd  midi controls.pd  ms2sample.pd
lessons/lesson 12 - process/: gui.pd  list-rand.pd  random-list.pd
lessons/lesson 13 - process/: sdoun-color.pd  simple counter.pd  simple fm.pd  simple-wind.pd
lessons/lesson 15 - process/: params.param
lessons/lesson 15 -process/: abstraction1.pd  params-000.param  params-001.param  snd1.pd  (+9 more)
lessons/zslib/cpp/: CMakeLists.txt  encoder.cpp  encoder.h  opus_decode.c  pdopus-help.pd  pdopus.c  reblocker.cpp  reblocker.h  resample.cpp  resample.h  stream.cpp  stream.h  udp_receive.cpp  udp_send_broadcast~.c  udp_send~.c
(+253 files in other folders)
